[tool.poetry]
name = "clickhouse-sqlalchemy"
version = "0.0.1"
description = "Simple ClickHouse SQLAlchemy Dialect"
authors = [
    "Konstantin Lebedev <kostyan.lebedev@gmail.com>",
]
license = "MIT"
readme = "README.rst"
packages = [
    { include = "clickhouse_sqlalchemy" },
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
sqlalchemy = ">=2.0.0,<2.1.0"
requests = "*"
clickhouse-driver = ">=0.1.2"
asynch = ">=0.2.5"

[tool.poetry.plugins."sqlalchemy.dialects"]
clickhouse = "clickhouse_sqlalchemy.drivers.http.base:ClickHouseDialect_http"
"clickhouse.http" = "clickhouse_sqlalchemy.drivers.http.base:ClickHouseDialect_http"
"clickhouse.native" = "clickhouse_sqlalchemy.drivers.native.base:ClickHouseDialect_native"
"clickhouse.asynch" = "clickhouse_sqlalchemy.drivers.asynch.base:ClickHouseDialect_asynch"

[tool.poetry.urls]
Documentation = "https://clickhouse-sqlalchemy.readthedocs.io"
Repository = "https://github.com/adjust/clickhouse-sqlalchemy"
Changelog = "https://github.com/adjust/clickhouse-sqlalchemy/blob/main/CHANGELOG.md"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]
build-backend = "poetry_dynamic_versioning.backend"
